Fix alignment of acronym box on mobile

--- a/_Youtube/css/sass/style.scss
+++ b/_Youtube/css/sass/style.scss
@@ -22,12 +22,12 @@ h1{
 			color: white;
 		}
 	}
-	
+
 }
 h2{
 	font-size: 1.4em;
 	margin: $padding 0;
-	min-height: $padding/2*12;
+	min-height: $padding/2*6;
 }
 #header.navbar{
 	min-height: 95px;
